# GNN-planning-paper

./: .gitignore  LICENSE  README.md  data_generation_script.py  dla_piotrka.txt  pyproject.toml  random_notes.md  requirements_cuda.txt  ruff.toml  setup.cfg
fast-downward-symbolic-optimal-actions/: build.py  build_configs.py
figures/: highlevel_architecture.drawio  pdg.drawio
ipc-competition-scripts/: run_experiment.py
mlruns/0/: meta.yaml
mlruns/105691654640266209/: meta.yaml
mlruns/107950084407022124/: meta.yaml
mlruns/181477905716398025/: meta.yaml
mlruns/196996377989302197/: meta.yaml
mlruns/224604199995028710/: meta.yaml
mlruns/229893232930694021/: meta.yaml
mlruns/266147261709488368/: meta.yaml
mlruns/317347886655567656/: meta.yaml
mlruns/359758243552775074/: meta.yaml
mlruns/401092093713405716/: meta.yaml
mlruns/438613149402224155/: meta.yaml
mlruns/456439419709361868/: meta.yaml
mlruns/462318957697291070/: meta.yaml
mlruns/467715833822590596/: meta.yaml
mlruns/524818652888148542/: meta.yaml
mlruns/538815533391395381/: meta.yaml
mlruns/635496786370374784/: meta.yaml
mlruns/661272543978602228/: meta.yaml
mlruns/693010337746955662/: meta.yaml
mlruns/695287739799799025/: meta.yaml
mlruns/695911533053727609/: meta.yaml
mlruns/731076685465575285/: meta.yaml
mlruns/922173033687888438/: meta.yaml
model-settings/: m2.json
simple_cmd_tools/: tar_manager.py  zip_manager.py  zzclean_stuff.py
src/: graph_data_generation.py  preprocessor.command  runner.py  train.py  training_case.py
src/graph_building/: __init__.py  (+1 more)
(+153057 files in other folders)
