[metadata]
name = my_package
version = 0.1.0
description = My package description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/username/my_package
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy
    pandas

[options.packages.find]
where=src